Refactor StagingArea ==> ModelActorTransaction
The transaction stores all events that are caused on the ModelActor state upon an IncomingActorMessage

Also removed some javadoc warning stuff